# proto/gen/api/v1/swagger/models/ad_guard_home_config_block_list.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// AdGuardHomeConfigBlockList ad guard home config block list
+//
+// swagger:model AdGuardHomeConfigBlockList
+type AdGuardHomeConfigBlockList struct {
+
+	// name
+	Name string `json:"name,omitempty"`
+
+	// url
+	URL string `json:"url,omitempty"`
+}
+
+// Validate validates this ad guard home config block list
+func (m *AdGuardHomeConfigBlockList) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this ad guard home config block list based on context it is used
+func (m *AdGuardHomeConfigBlockList) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *AdGuardHomeConfigBlockList) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *AdGuardHomeConfigBlockList) UnmarshalBinary(b []byte) error {
+	var res AdGuardHomeConfigBlockList
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
