# proto/gen/api/v1/swagger/models/ad_guard_status_query_log.go
@@ -1,335 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-	"strconv"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// AdGuardStatusQueryLog ad guard status query log
-//
-// swagger:model AdGuardStatusQueryLog
-type AdGuardStatusQueryLog struct {
-
-	// client
-	// Required: true
-	Client *QueryLogClient `json:"client"`
-
-	// reason
-	// Required: true
-	Reason *QueryLogReason `json:"reason"`
-
-	// request
-	// Required: true
-	Request *QueryLogRequest `json:"request"`
-
-	// response
-	// Required: true
-	Response *AdGuardStatusQueryLogResponse `json:"response"`
-
-	// rules
-	Rules []*QueryLogRule `json:"rules"`
-
-	// timestamp
-	// Required: true
-	// Format: date-time
-	Timestamp *strfmt.DateTime `json:"timestamp"`
-}
-
-// Validate validates this ad guard status query log
-func (m *AdGuardStatusQueryLog) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateClient(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateReason(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateRequest(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateResponse(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateRules(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateTimestamp(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *AdGuardStatusQueryLog) validateClient(formats strfmt.Registry) error {
-
-	if err := validate.Required("client", "body", m.Client); err != nil {
-		return err
-	}
-
-	if m.Client != nil {
-		if err := m.Client.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("client")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("client")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *AdGuardStatusQueryLog) validateReason(formats strfmt.Registry) error {
-
-	if err := validate.Required("reason", "body", m.Reason); err != nil {
-		return err
-	}
-
-	if err := validate.Required("reason", "body", m.Reason); err != nil {
-		return err
-	}
-
-	if m.Reason != nil {
-		if err := m.Reason.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("reason")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("reason")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *AdGuardStatusQueryLog) validateRequest(formats strfmt.Registry) error {
-
-	if err := validate.Required("request", "body", m.Request); err != nil {
-		return err
-	}
-
-	if m.Request != nil {
-		if err := m.Request.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("request")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("request")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *AdGuardStatusQueryLog) validateResponse(formats strfmt.Registry) error {
-
-	if err := validate.Required("response", "body", m.Response); err != nil {
-		return err
-	}
-
-	if m.Response != nil {
-		if err := m.Response.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("response")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("response")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *AdGuardStatusQueryLog) validateRules(formats strfmt.Registry) error {
-	if swag.IsZero(m.Rules) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(m.Rules); i++ {
-		if swag.IsZero(m.Rules[i]) { // not required
-			continue
-		}
-
-		if m.Rules[i] != nil {
-			if err := m.Rules[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("rules" + "." + strconv.Itoa(i))
-				} else if ce, ok := err.(*errors.CompositeError); ok {
-					return ce.ValidateName("rules" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-func (m *AdGuardStatusQueryLog) validateTimestamp(formats strfmt.Registry) error {
-
-	if err := validate.Required("timestamp", "body", m.Timestamp); err != nil {
-		return err
-	}
-
-	if err := validate.FormatOf("timestamp", "body", "date-time", m.Timestamp.String(), formats); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validate this ad guard status query log based on the context it is used
-func (m *AdGuardStatusQueryLog) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.contextValidateClient(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.contextValidateReason(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.contextValidateRequest(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.contextValidateResponse(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.contextValidateRules(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *AdGuardStatusQueryLog) contextValidateClient(ctx context.Context, formats strfmt.Registry) error {
-
-	if m.Client != nil {
-		if err := m.Client.ContextValidate(ctx, formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("client")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("client")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *AdGuardStatusQueryLog) contextValidateReason(ctx context.Context, formats strfmt.Registry) error {
-
-	if m.Reason != nil {
-		if err := m.Reason.ContextValidate(ctx, formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("reason")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("reason")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *AdGuardStatusQueryLog) contextValidateRequest(ctx context.Context, formats strfmt.Registry) error {
-
-	if m.Request != nil {
-		if err := m.Request.ContextValidate(ctx, formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("request")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("request")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *AdGuardStatusQueryLog) contextValidateResponse(ctx context.Context, formats strfmt.Registry) error {
-
-	if m.Response != nil {
-		if err := m.Response.ContextValidate(ctx, formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("response")
-			} else if ce, ok := err.(*errors.CompositeError); ok {
-				return ce.ValidateName("response")
-			}
-			return err
-		}
-	}
-
-	return nil
-}
-
-func (m *AdGuardStatusQueryLog) contextValidateRules(ctx context.Context, formats strfmt.Registry) error {
-
-	for i := 0; i < len(m.Rules); i++ {
-
-		if m.Rules[i] != nil {
-			if err := m.Rules[i].ContextValidate(ctx, formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("rules" + "." + strconv.Itoa(i))
-				} else if ce, ok := err.(*errors.CompositeError); ok {
-					return ce.ValidateName("rules" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *AdGuardStatusQueryLog) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *AdGuardStatusQueryLog) UnmarshalBinary(b []byte) error {
-	var res AdGuardStatusQueryLog
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
