# proto/gen/api/v1/swagger/models/ad_guard_status_query_log_response.go
@@ -1,137 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-	"strconv"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// AdGuardStatusQueryLogResponse ad guard status query log response
-//
-// swagger:model AdGuardStatusQueryLogResponse
-type AdGuardStatusQueryLogResponse struct {
-
-	// answers
-	Answers []*ResponseAnswer `json:"answers"`
-
-	// elapsed ms
-	ElapsedMs float64 `json:"elapsed_ms,omitempty"`
-
-	// status
-	// Required: true
-	Status *string `json:"status"`
-}
-
-// Validate validates this ad guard status query log response
-func (m *AdGuardStatusQueryLogResponse) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateAnswers(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateStatus(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *AdGuardStatusQueryLogResponse) validateAnswers(formats strfmt.Registry) error {
-	if swag.IsZero(m.Answers) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(m.Answers); i++ {
-		if swag.IsZero(m.Answers[i]) { // not required
-			continue
-		}
-
-		if m.Answers[i] != nil {
-			if err := m.Answers[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("answers" + "." + strconv.Itoa(i))
-				} else if ce, ok := err.(*errors.CompositeError); ok {
-					return ce.ValidateName("answers" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-func (m *AdGuardStatusQueryLogResponse) validateStatus(formats strfmt.Registry) error {
-
-	if err := validate.Required("status", "body", m.Status); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validate this ad guard status query log response based on the context it is used
-func (m *AdGuardStatusQueryLogResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.contextValidateAnswers(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *AdGuardStatusQueryLogResponse) contextValidateAnswers(ctx context.Context, formats strfmt.Registry) error {
-
-	for i := 0; i < len(m.Answers); i++ {
-
-		if m.Answers[i] != nil {
-			if err := m.Answers[i].ContextValidate(ctx, formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("answers" + "." + strconv.Itoa(i))
-				} else if ce, ok := err.(*errors.CompositeError); ok {
-					return ce.ValidateName("answers" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *AdGuardStatusQueryLogResponse) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *AdGuardStatusQueryLogResponse) UnmarshalBinary(b []byte) error {
-	var res AdGuardStatusQueryLogResponse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
