# proto/gen/api/v1/swagger/models/query_log_rule.go
@@ -1,74 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-	"github.com/go-openapi/validate"
-)
-
-// QueryLogRule query log rule
-//
-// swagger:model QueryLogRule
-type QueryLogRule struct {
-
-	// filter id
-	FilterID string `json:"filter_id,omitempty"`
-
-	// text
-	// Required: true
-	Text *string `json:"text"`
-}
-
-// Validate validates this query log rule
-func (m *QueryLogRule) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateText(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *QueryLogRule) validateText(formats strfmt.Registry) error {
-
-	if err := validate.Required("text", "body", m.Text); err != nil {
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validates this query log rule based on context it is used
-func (m *QueryLogRule) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *QueryLogRule) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *QueryLogRule) UnmarshalBinary(b []byte) error {
-	var res QueryLogRule
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
