# proto/gen/api/v1/swagger/models/v1_ad_guard_home_status.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// V1AdGuardHomeStatus v1 ad guard home status
+//
+// swagger:model v1AdGuardHomeStatus
+type V1AdGuardHomeStatus struct {
+
+	// dns
+	DNS []string `json:"dns"`
+}
+
+// Validate validates this v1 ad guard home status
+func (m *V1AdGuardHomeStatus) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this v1 ad guard home status based on context it is used
+func (m *V1AdGuardHomeStatus) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *V1AdGuardHomeStatus) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *V1AdGuardHomeStatus) UnmarshalBinary(b []byte) error {
+	var res V1AdGuardHomeStatus
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
